--- a/sipil/src/main/resources/templates/fragments/fragment.html
+++ b/sipil/src/main/resources/templates/fragments/fragment.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://thymeleaf.org">
     <head>
         <!-- css fragment -->
         <head th:fragment="css">
@@ -26,8 +26,8 @@
             <div class=" collapse navbar-collapse" id="navbarAltMarkup">
                 <div class=" navbar-nav">
                     <!-- still todo///// -->
-                    <a class=" nav-item nav-link active" th:href="@{/}">Pilot<span class=" sr-only">{current}</span></a>
-                    <a class=" nav-item nav-link active" th:href="@{/}">Penerbangan<span class=" sr-only">{current}</span></a>
+                    <a class=" nav-item nav-link active" th:href="@{/pilot}">Pilot<span class=" sr-only">{current}</span></a>
+                    <a class=" nav-item nav-link active" th:href="@{/penerbangan}">Penerbangan<span class=" sr-only">{current}</span></a>
                     <a class=" nav-item nav-link active" th:href="@{/}">Cari<span class=" sr-only">{current}</span></a>
                 </div>
             </div>
