--- a/sipil/src/main/resources/templates/home.html
+++ b/sipil/src/main/resources/templates/home.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://thymeleaf.org">
     <head>
         <meta charset="UTF-8">
         <title>Home</title>
-
         <object th:include="fragments/fragment :: css" th:remove="tag"></object>
         <object th:include="fragments/fragment :: js" th:remove="tag"></object>
     </head>
@@ -16,8 +15,8 @@
         <h3  class="text-center" style="color: black;">Daftar Fitur:</h3>
         <div class="container align-content-center" style="margin-right: 38%; margin-left: 38%;">
             <div class=" container-fluid btn-container align-content-center">
-                <a th:href="@{/}" class=" btn" style="background-color: midnightblue; color: white;">Pilot</a>
-                <a th:href="@{/}" class=" btn" style="background-color: midnightblue; color: white;">Penerbangan</a>
+                <a th:href="@{/pilot}" class=" btn" style="background-color: midnightblue; color: white;">Pilot</a>
+                <a th:href="@{/penerbangan}" class=" btn" style="background-color: midnightblue; color: white;">Penerbangan</a>
                 <a th:href="@{/}" class=" btn" style="background-color: midnightblue; color: white;">Cari</a>
             </div>
         </div>
