--- a/sipil/src/main/resources/templates/detail-pilot.html
+++ b/sipil/src/main/resources/templates/detail-pilot.html
@@ -59,10 +59,10 @@
                         </tr>
                     </table>
                     <div class=" container align-content-end" style="padding-left: 50%; margin: 5%;"> 
-                        <td><a class="btn" style="background-color:darkblue; color: white;" 
-                            th:href="@{/pilot/ubah/}+${pilot.nip}">Ubah</a></td>
-                        <td><a class="btn" style="background-color: darkred; color: white;" 
-                            th:href="@{/pilot/hapus/}+${pilot.nip}">Hapus</a></td>
+                        <a class="btn" style="background-color:darkblue; color: white;" 
+                            th:href="@{/pilot/ubah/}+${pilot.nip}">Ubah</a>
+                        <a class="btn" style="background-color: darkred; color: white;" 
+                            th:href="@{/pilot/hapus/}+${pilot.nip}">Hapus</a>
                     </div>
                 </div>
             </div>
