--- a/sipil/src/main/resources/templates/fragments/fragment.html
+++ b/sipil/src/main/resources/templates/fragments/fragment.html
@@ -28,7 +28,7 @@
                     <!-- still todo///// -->
                     <a class=" nav-item nav-link active" th:href="@{/pilot}">Pilot<span class=" sr-only">{current}</span></a>
                     <a class=" nav-item nav-link active" th:href="@{/penerbangan}">Penerbangan<span class=" sr-only">{current}</span></a>
-                    <a class=" nav-item nav-link active" th:href="@{/}">Cari<span class=" sr-only">{current}</span></a>
+                    <a class=" nav-item nav-link active" th:href="@{/cari}">Cari<span class=" sr-only">{current}</span></a>
                 </div>
             </div>
         </nav>
