--- a/sipil/src/main/resources/templates/cari.html
+++ b/sipil/src/main/resources/templates/cari.html
@@ -13,7 +13,7 @@
             <h3 class=" text-center"  th:text="'Fitur Pencarian'"></h3>
             <div class="container align-content-center text-center">
                 <a th:href="@{/cari/pilot?kodeMaskapai=nothing&idSekolah=0}" class=" btn text-center" style="background-color: midnightblue; color: white; margin: 2%;">Cari Pilot berdasarkan Akademi/Maskapai</a><br>
-                <a th:href="@{/}" class=" btn text-center" style="background-color: midnightblue; color: white; margin: 2%;">Cari Pilot dengan Penerbangan Terbanyak</a><br>
+                <a th:href="@{/cari/pilot/penerbangan-terbanyak?kodeMaskapai=nothing}" class=" btn text-center" style="background-color: midnightblue; color: white; margin: 2%;">Cari Pilot dengan Penerbangan Terbanyak</a><br>
             </div>
         </div>
     </body>
