--- a/sipil/src/main/resources/templates/home.html
+++ b/sipil/src/main/resources/templates/home.html
@@ -17,7 +17,7 @@
             <div class=" container-fluid btn-container align-content-center">
                 <a th:href="@{/pilot}" class=" btn" style="background-color: midnightblue; color: white;">Pilot</a>
                 <a th:href="@{/penerbangan}" class=" btn" style="background-color: midnightblue; color: white;">Penerbangan</a>
-                <a th:href="@{/}" class=" btn" style="background-color: midnightblue; color: white;">Cari</a>
+                <a th:href="@{/cari}" class=" btn" style="background-color: midnightblue; color: white;">Cari</a>
             </div>
         </div>
     </body>
