--- a/sipil/src/main/resources/templates/form-add-penerbangan.html
+++ b/sipil/src/main/resources/templates/form-add-penerbangan.html
@@ -27,7 +27,7 @@
                     Kota Tujuan <br>
                     <input type="text" th:field="*{kotaTujuan}">
                     <br>
-                    <div class="container btn-container" style="padding-left: 45%;" >
+                    <div class="container btn-container" style="padding-left: 45%; margin: 5%;" >
                         <a class=" btn" style="background-color: white; color: midnightblue; 
                         border-color: midnightblue;" th:href="@{/penerbangan}">Batal</a>
                         <button class="btn" value="Submit" type="submit" style="background-color: midnightblue; color: white;">Tambah</button>
