--- a/sipil/src/main/resources/templates/home.html
+++ b/sipil/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
             <h1 class=" text-center">Selamat Datang di SIPILOT!</h1>
         </div>
         <h3  class="text-center" style="color: black;">Daftar Fitur:</h3>
-        <div class="container align-content-center" style="margin-right: 38%; margin-left: 38%;">
+        <div class="container align-content-center" style="margin-right:10%; padding-left: 38%;">
             <div class=" container-fluid btn-container align-content-center">
                 <a th:href="@{/pilot}" class=" btn" style="background-color: midnightblue; color: white;">Pilot</a>
                 <a th:href="@{/penerbangan}" class=" btn" style="background-color: midnightblue; color: white;">Penerbangan</a>
